--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-	<title>Dimension by HTML5 UP</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+    <title>Gaganjot Kaur Shan - Data Science Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
+    
+    <meta property="og:description" content="Data Science enthusiast with a passion for Machine Learning and Data Analytics. Explore my portfolio to see how I turn data into actionable insights." />
+    <meta property="og:image" content="https://yourdomain.com/images/profile-pic.jpg" />
 </head>
+
 
 <body class="is-preload">
 
