--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
 				<h2 class="major">Hello and Welcome!</h2>
 				<span class="profile image"><img src="images/profile-pic.jpg" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
-					<p>Welcome to my portfolio! I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine
-						Learning and Data Analytics.
-						I love turning data into actionable insights and crafting solutions
-						that make a difference.</p>
+					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data Analytics.
+						I love turning data into actionable insights and crafting solutions that make a difference.</p>
 					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development. I thrive on tackling tough problems and am always eager to learn something new.</p>
-					<p>Take a look around and explore my work. And feel free to check out my <a
-							href="#resume">resume!</a>.</p>
+					<p>Take a look around and explore my work. And feel free to check out my <a href="#resume">resume!</a>.</p>
 					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
 						learning something new. My goal is to contribute effectively to meaningful projects that make a
 						positive impact. Feel free to explore my portfolio and discover how I bring my skills and
@@ -116,8 +113,8 @@
 			<!-- resume -->
 
 			<article id="resume">
-				<div id="resume-nav-and-download">
-					<div class="download-resume">
+				<div id="resume-header">
+					<div class="resume-download">
 						<a href="pdfs/GaganjotShanResume.pdf" class="button" download>Download Resume PDF</a>
 					</div>
 					<nav class="scrolling-nav">
@@ -462,7 +459,8 @@
 						Autism Diagnosis</a></h2>
 				</header>
 				<a href="#" class="image fit"><img src="images/autismawareness.jpg" alt="" /></a>
-				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns and their correlation with behavioral traits.</p>
+				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns 
+					and their correlation with behavioral traits.</p>
 				<ul class="actions special">
 					<li><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis" class="button">View
 							Project</a></li>
@@ -474,7 +472,8 @@
 				<h2><a
 						href="https://github.com/gaganjotshan/MLOps-End2End">MLOps Pipeline on AWS:<br />
 						From Data to Deployment</a></h2>
-				<p>This is an end-to-end machine learning project focusing on data ingestion, data transformation, model training, model evaluation, and model deployment on AWS using services like EC2 and S3.
+				<p>This is an end-to-end machine learning project focusing on data ingestion, data transformation, 
+					model training, model evaluation, and model deployment on AWS using services like EC2 and S3.
 				</p>
 
 				<a href="https://github.com/gaganjotshan/MLOps-End2End"
@@ -800,7 +799,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy; GaganjotShan HTML5 UP</p>
+			<p class="copyright">&copy; GaganjotShan</p>
 		</footer>
 
 	</div>
