--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 				<h2 class="major">Hello and Welcome!</h2>
 				<span class="profile image"><img src="images/profile-pic.jpg" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
-					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data Analytics.
+					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data
+						Analytics.
 						I love turning data into actionable insights and crafting solutions that make a difference.</p>
-					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development. I thrive on tackling tough problems and am always eager to learn something new.</p>
-					<p>Take a look around and explore my work. And feel free to check out my <a href="#resume">resume!</a>.</p>
+					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development. I thrive on
+						tackling tough problems and am always eager to learn something new.</p>
+					<p>Take a look around and explore my work. And feel free to check out my <a
+							href="#resume">resume!</a>.</p>
 					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
 						learning something new. My goal is to contribute effectively to meaningful projects that make a
 						positive impact. Feel free to explore my portfolio and discover how I bring my skills and
@@ -429,9 +432,11 @@
 
 				<p>Welcome to my collection of notebooks and projects!<br />
 					Explore topics like data analytics, machine learning, MLOps, deep learning, NLP, and more.<br />
-					Each project is linked to its GitHub repository, so you can download and experiment with the code.<br />
+					Each project is linked to its GitHub repository, so you can download and experiment with the
+					code.<br />
 					I'm always open to suggestions, correlations, improvements, or even a friendly roast.<br />
-					From data cleaning and visualization to deep-dive analysis, my work showcases a wide range of skills.<br />
+					From data cleaning and visualization to deep-dive analysis, my work showcases a wide range of
+					skills.<br />
 					I stay up-to-date with the latest tech and methods through continuous online learning.<br />
 					Feel free to explore my work and reach out!</p>
 			</article>
@@ -442,7 +447,8 @@
 						href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql">Data
 						Cleaning<br />
 						in SQL</a></h2>
-				<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.<br />
+				<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for
+					analysis.<br />
 				</p>
 
 				<a href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql"
@@ -456,11 +462,11 @@
 			<article id="projects">
 				<header>
 					<h2><a href="#">Data Exploration:<br />
-						Autism Diagnosis</a></h2>
+							Autism Diagnosis</a></h2>
 				</header>
-				<a href="#" class="image fit"><img src="images/autismawareness.jpg" alt="" /></a>
-				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns 
+				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns
 					and their correlation with behavioral traits.</p>
+				<a href="#" class="image fit"><img src="images/autismawareness.jpg" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis" class="button">View
 							Project</a></li>
@@ -469,18 +475,16 @@
 
 			<article id="projects" class="project-article">
 
-				<h2><a
-						href="https://github.com/gaganjotshan/MLOps-End2End">MLOps Pipeline on AWS:<br />
+				<h2><a href="https://github.com/gaganjotshan/MLOps-End2End">MLOps Pipeline on AWS:<br />
 						From Data to Deployment</a></h2>
-				<p>This is an end-to-end machine learning project focusing on data ingestion, data transformation, 
+				<p>This is an end-to-end machine learning project focusing on data ingestion, data transformation,
 					model training, model evaluation, and model deployment on AWS using services like EC2 and S3.
 				</p>
 
-				<a href="https://github.com/gaganjotshan/MLOps-End2End"
-					class="image main"><img src="images/mlops-stack.jpg" /></a>
+				<a href="https://github.com/gaganjotshan/MLOps-End2End" class="image main"><img
+						src="images/mlops-stack.jpg" /></a>
 				<ul class="actions special">
-					<li><a href="https://github.com/gaganjotshan/MLOps-End2End"
-							class="button">Ongoing</a></li>
+					<li><a href="https://github.com/gaganjotshan/MLOps-End2End" class="button">Ongoing</a></li>
 				</ul>
 			</article>
 
@@ -505,8 +509,8 @@
 					<h2><a href="#">Tableau Dashboards<br />
 						</a></h2>
 				</header>
-				<a href="" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 				<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
+				<a href="" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="" class="button">Upcomming</a></li>
 				</ul>
@@ -542,6 +546,9 @@
 								class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/gaganjotshan" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
+					<li><a href="mailto:gagan.shan7@gmail.com" class="icon solid fa-envelope"><span
+								class="label">Email</span></a></li>
+
 				</ul>
 			</article>
 
@@ -813,6 +820,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+
+	<script>
+		document.getElementById('emailLink').addEventListener('click', function(e) {
+			e.preventDefault();
+			window.location.href = 'mailto:' + 'gagan.shan7' + '@' + 'gmail.com';
+		});
+		</script>
+		
 
 </body>
 
