--- a/index.html
+++ b/index.html
@@ -207,21 +207,18 @@
 										<p>June 2018 - August 2018</p>
 									</div>
 									<div class="right-column">
-										<h4>Project Description</h4>
+										<h4>Networking in Transport Systems</h4>
 										<p>Engineered a custom application-layer class with Python sockets for
-											optimizing
-											network communication. Achieved up to a 3% improvement in system
-											responsiveness
-											by optimizing data transmission latency.</p>
+											optimizing network communication. Achieved up to a 3% improvement in system
+											responsiveness by optimizing data transmission latency.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('2'); return false;">Show More</a>
 									</div>
 								</div>
 								<div id="more-2" class="more-details">
-									<h4>Networking in Transport Systems</h4>
+									<h4>Project Description</h4>
 									<p>Developed a custom application-layer class using Python sockets to enhance
-										network
-										communication efficiency in railway systems.</p>
+										network communication efficiency in railway systems.</p>
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
@@ -314,8 +311,8 @@
 										<h4>Oscillatory Neural Network for Voice Spoofing Detection</h4>
 										<p>EURECOM</p>
 										<p>September 2022 - February 2023</p>
-										<p><a href="https://www.canva.com/design/DAFaoooWuuk/DEoVidx7jjQZxpb7F5xkJg/view"
-												target="_blank">View Project</a></p>
+										<p><strong><a href="https://www.canva.com/design/DAFaoooWuuk/DEoVidx7jjQZxpb7F5xkJg/view"
+												target="_blank">View Project</a></strong></p>
 									</div>
 									<div class="right-column">
 										<p>Developed an innovative neural network model to detect synthetic speech and
