--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 										<h4>Oscillatory Neural Network for Voice Spoofing Detection</h4>
 										<p>EURECOM</p>
 										<p>September 2022 - February 2023</p>
-										<p><strong><a href="https://www.canva.com/design/DAFaoooWuuk/DEoVidx7jjQZxpb7F5xkJg/view"
-												target="_blank">View Project</a></strong></p>
+										<p><a href="https://www.canva.com/design/DAFaoooWuuk/DEoVidx7jjQZxpb7F5xkJg/view"
+												target="_blank">View Project</a></p>
 									</div>
 									<div class="right-column">
 										<p>Developed an innovative neural network model to detect synthetic speech and
