--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			
 			  
 			<div class="logo">
-				<img src="images/profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+				<img src="images/profile-pic.png" alt="Profile Picture" class="profile-pic">
 			</div>
 
 			<div class="content">
@@ -67,7 +67,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Hello and Welcome!</h2>
-				<span class="profile image"><img src="images/profile-pic.jpg" alt="Gaganjot Shan" /></span>
+				<span class="profile image"><img src="images/profile-pic.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
 					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data
 						Analytics.
@@ -365,7 +365,7 @@
 							<div class="education-item">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Masters of Science in Data Science and Engineering</h4>
+										<h4>Masters of Science </br> Data Science and Engineering</h4>
 										<p>EURECOM</p>
 										<p>Biot, France</p>
 										<p>2021 - 2023</p>
@@ -390,7 +390,7 @@
 							<div class="education-item">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Bachelors of Engineering in Computer Science and Engineering</h4>
+										<h4>Bachelors of Engineering </br> Computer Science and Engineering</h4>
 										<p>Chandigarh University</p>
 										<p>Mohali, India</p>
 										<p>2016 - 2020</p>
