--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			
 			  
 			<div class="logo">
-				<img src="images/profile-pic.png" alt="Profile Picture" class="profile-pic">
+				<img src="images/profile-img.png" alt="Profile Picture" class="profile-pic">
 			</div>
 
 			<div class="content">
@@ -67,7 +67,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Hello and Welcome!</h2>
-				<span class="profile image"><img src="images/profile-pic.png" alt="Gaganjot Shan" /></span>
+				<span class="profile image"><img src="images/profile-img.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
 					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data
 						Analytics.
