--- a/index.html
+++ b/index.html
@@ -158,16 +158,15 @@
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
 										<p>Developed a SAP Fiori (UI5) app integrating ledger technologies and
-											REST-APIs,
-											enhancing UX for security in next-gen analytics.</p>
+											REST-APIs, enhancing UX for security in next-gen analytics.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('1'); return false;">Show More</a>
 									</div>
 								</div>
 								<div id="more-1" class="more-details">
-									<h4>Project Description</h4>
-									<p>Developed a SAP Fiori (UI5) app integrating ledger technologies and REST-APIs,
-										enhancing UX for security in next-gen analytics.</p>
+									<h4>Front End Developer</h4>
+									<p>Developed an advanced SAP Fiori (UI5) application that integrates ledger technologies and REST APIs to enhance the user experience in next-generation security analytics. The application was designed to provide a robust and scalable solution for handling security data with improved accuracy and efficiency.
+										This project showcases my expertise in front-end development, particularly with SAP Fiori (UI5), and my ability to integrate complex technologies to deliver robust, user-centric solutions in the field of security analytics.</p>
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
@@ -209,22 +208,22 @@
 									<div class="right-column">
 										<h4>Networking in Transport Systems</h4>
 										<p>Engineered a custom application-layer class with Python sockets for
-											optimizing network communication. Achieved up to a 3% improvement in system
+											optimizing inter-network communication. Achieved up to a 3% improvement in system
 											responsiveness by optimizing data transmission latency.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('2'); return false;">Show More</a>
 									</div>
 								</div>
 								<div id="more-2" class="more-details">
-									<h4>Project Description</h4>
-									<p>Developed a custom application-layer class using Python sockets to enhance
-										network communication efficiency in railway systems.</p>
+									<h4> Network Programming in Python</h4>
+									<p>Used Python socket programming to enhance inter-network communication in railway systems. 
+										By implementing efficient data serialization and compression techniques, I minimized payload size and reduced network congestion. 
+										These optimizations resulted in a 3% improvement in overall system responsiveness, significantly enhancing data transmission efficiency.</p>
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
 											<ul>
-												<li>Optimized data transmission latency, improving system responsiveness
-													by up to 3%.</li>
+												<li>Engineered a custom application-layer class with Python sockets.</li>
 												<li>Collaborated with cross-functional teams to diagnose and resolve
 													software development challenges.</li>
 												<li>Delivered presentations translating technical details into
@@ -261,17 +260,17 @@
 									<div class="right-column">
 										<h4>Young Talent Nurture</h4>
 										<p>Built predictive models using machine learning and statistical analysis,
-											boosting equipment failure forecasting by 2-5%. Visualized and analyzed over 50,000
-											data points in datasets, identifying trends and patterns with SQL and Tableau.
+											boosting equipment failure forecasting by 2-5%. Visualized and analyzed large datasets, identifying trends and patterns with SQL and Tableau.
 										</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('3'); return false;">Show More</a>
 									</div>
 								</div>
 								<div id="more-3" class="more-details">
-									<h4>Project Description</h4>
-									<p>Developed predictive models and conducted data analysis to improve equipment
-										failure forecasting and identify trends in large datasets.</p>
+									<h4>Research Intern</h4>
+									<p>Developed predictive models and conducted data analysis to enhance equipment failure forecasting. 
+										Utilized advanced statistical techniques to identify trends in large operational datasets, contributing to improved maintenance scheduling. 
+										Participated in advanced mathematics training to strengthen analytical skills and deepen understanding of strengthen analytical skills and improve capabilities in complex problem-solving.</p>
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
