--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 												<li>Improved robustness through debugging existing modules and
 													collaboratively implementing advanced security features.</li>
 												<li>Utilized ML-based synthetic data generation techniques to preserve
-													privacy, increasing KPI anomaly detection accuracy up to 5.42%.</li>
+													privacy.</li>
 											</ul>
 										</div>
 										<div class="right-column">
