--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 									</div>
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
-										<p>Developed an advanced SAP Fiori (UI5) application that integrates ledger technologies and REST APIs to enhance the user experience in next-generation security analytics. 
+										<p>Developed a SAP Fiori (UI5) application that integrates ledger technologies and REST APIs to enhance the UX in next-generation security analytics. 
 											The application was designed to provide a robust and scalable solution for handling security data with improved accuracy and efficiency.
 											This project showcases my expertise in front-end development, particularly with SAP Fiori (UI5), and my ability to integrate complex technologies to deliver robust, user-centric solutions in the field of security analytics.</p>
 										<a href="#" class="button toggle-details-btn"
