--- a/index.html
+++ b/index.html
@@ -157,9 +157,8 @@
 									</div>
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
-										<p>Developed a SAP Fiori (UI5) application that integrates ledger technologies and REST APIs to enhance the UX in next-generation security analytics. 
-											The application was designed to provide a robust and scalable solution for handling security data with improved accuracy and efficiency.
-											This project showcases my expertise in front-end development, particularly with SAP Fiori (UI5), and my ability to integrate complex technologies to deliver robust, user-centric solutions in the field of security analytics.</p>
+										<p>Developed a SAP Fiori (UI5) application that enhances user experience while interfacing with the distributed ledger-based solution through REST-APIs. 
+											This intuitive interface improves security analytics by providing efficient access to cross-company shared data, ensuring transparency and traceability in a user-friendly manner.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('1'); return false;">Show More</a>
 									</div>
@@ -185,6 +184,7 @@
 													application.
 												</li>
 												<li>Increased KPI anomaly detection accuracy by 5.42%.</li>
+												<li>Created and maintained comprehensive documentation for setup, development, and deployment processes.</li>
 											</ul>
 										</div>
 									</div>
