--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 									</div>
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
-										<p>Developed a SAP Fiori (UI5) application that enhances user experience while interfacing with the distributed ledger-based solution through REST-APIs. 
-											This intuitive interface improves security analytics by providing efficient access to cross-company shared data, ensuring transparency and traceability in a user-friendly manner.</p>
+										<p>Developed a SAP Fiori (UI5) application that enhances the user experience while interfacing with the distributed ledger-based solution through REST APIs. 
+											This intuitive interface improves security analytics by providing efficient access to cross-company shared data, balancing transparency and traceability.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('1'); return false;">Show More</a>
 									</div>
@@ -180,9 +180,7 @@
 										<div class="right-column">
 											<h4>Achievements</h4>
 											<ul>
-												<li>Successfully developed and deployed a scalable and secure
-													application.
-												</li>
+												<li>Successfully developed and deployed a scalable and secure application.</li>
 												<li>Increased KPI anomaly detection accuracy by 5.42%.</li>
 												<li>Created and maintained comprehensive documentation for setup, development, and deployment processes.</li>
 											</ul>
@@ -230,10 +228,8 @@
 											<h4>Achievements</h4>
 											<ul>
 												<li>Successfully improved network communication efficiency.</li>
-												<li>Received commendations for innovative problem-solving and effective
-													collaboration.</li>
-												<li>Implemented solutions that led to a 3% improvement in overall system
-													performance.</li>
+												<li>Received commendations for innovative problem-solving and effective collaboration.</li>
+												<li>Implemented solutions that led to a 3% improvement in the overall system performance.</li>
 											</ul>
 										</div>
 									</div>
@@ -249,16 +245,14 @@
 								<div class="experience-main-content">
 									<div class="left-column">
 										<h4>Data Science and Mathematics Intern</h4>
-										<p>Indian Institute of Space Science and Technology | Thiruvananthapuram, India
-										</p>
+										<p>Indian Institute of Space Science and Technology | Thiruvananthapuram, India</p>
 										<p>May 2017 - June 2017</p>
 									</div>
 									<div class="right-column">
 										<h4>Young Talent Nurture</h4>
-										<p>Developed predictive models and conducted data analysis to enhance equipment failure forecasting. 
-											Analyzed and visualized large datasets, identifying trends and patterns with SQL and Tableau.
-											Utilized advanced statistical techniques to identify trends in large operational datasets, contributing to improved maintenance scheduling. 
-											Participated in advanced mathematics training to strengthen analytical skills and deepen understanding of strengthen analytical skills and improve capabilities in complex problem-solving.
+										<p>Developed predictive models for equipment failure forecasting while conducting data analysis and visualization using SQL and Tableau. 
+											Applied advanced statistical techniques to large operational datasets, improving maintenance scheduling. 
+											Enhanced analytical and problem-solving skills through advanced mathematics training.
 										</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('3'); return false;">Show More</a>
