--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 									</div>
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
-										<p>Developed a SAP Fiori (UI5) application that enhances user experience while interfacing with the distributed ledger-based solution through REST-APIs. 
-											This intuitive interface improves security analytics by providing efficient access to cross-company shared data, ensuring transparency and traceability in a user-friendly manner.</p>
+										<p>Developed a SAP Fiori (UI5) application that enhances user experience while interfacing with the distributed ledger-based solutions through REST-APIs. 
+											This intuitive interface provides a window to secure analytics and an efficient access to cross-company shared data, ensuring transparency and traceability in a user-friendly manner.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('1'); return false;">Show More</a>
 									</div>
@@ -207,7 +207,7 @@
 									<div class="right-column">
 										<h4>Networking in Transport Systems</h4>
 										<p>Used Python socket programming to enhance inter-network communication in railway systems. 
-											By implementing efficient data serialization and compression techniques, we minimized payload size and reduced network congestion. 
+											By implementing efficient data serialization and compression techniques, we were able to minimized payload size. 
 											These optimizations resulted in a 3% improvement in overall system responsiveness, significantly enhancing data transmission efficiency.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('2'); return false;">Show More</a>
@@ -255,10 +255,9 @@
 									</div>
 									<div class="right-column">
 										<h4>Young Talent Nurture</h4>
-										<p>Developed predictive models and conducted data analysis to enhance equipment failure forecasting. 
-											Analyzed and visualized large datasets, identifying trends and patterns with SQL and Tableau.
-											Utilized advanced statistical techniques to identify trends in large operational datasets, contributing to improved maintenance scheduling. 
-											Participated in advanced mathematics training to strengthen analytical skills and deepen understanding of strengthen analytical skills and improve capabilities in complex problem-solving.
+										<p>
+											Developed predictive models for equipment failure forecasting and analyzed large datasets using SQL and Tableau to identify trends and patterns. 
+											Applied advanced statistical techniques to optimize maintenance scheduling and engaged in advanced mathematics training to enhance analytical and problem-solving skills.
 										</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('3'); return false;">Show More</a>
