--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 											<ul>
 												<li>Enhanced scalability by containerizing the project with Docker and
 													deploying on Kubernetes (Kyma) clusters.</li>
-												<li>Improved robustness through debugging existing modules and
-													collaboratively implementing advanced security features.</li>
+												<li>Improved robustness through debugging existing modules.</li>
 												<li>Utilized ML-based synthetic data generation techniques to preserve
 													privacy.</li>
 											</ul>
@@ -204,9 +203,9 @@
 									</div>
 									<div class="right-column">
 										<h4>Networking in Transport Systems</h4>
-										<p>Used Python socket programming to enhance inter-network communication in railway systems. 
-											By implementing efficient data serialization and compression techniques, we were able to minimized payload size. 
-											These optimizations resulted in a 3% improvement in overall system responsiveness, significantly enhancing data transmission efficiency.</p>
+										<p>Enhanced railway inter-network communication using Python socket programming. 
+											Implemented data serialization and compression techniques to minimize payload size, 
+											resulting in a 3% improvement in system responsiveness and increased data transmission efficiency.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('2'); return false;">Show More</a>
 									</div>
@@ -562,7 +561,8 @@
 
 			<article id="projects" class="project-article">
 				<header>
-					<h2><a href="#">Tableau Dashboards<br />
+					<h2><a href="#">Data Visualisation:</br>
+						Tableau Dashboards
 						</a></h2>
 				</header>
 				<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
