--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
 			<article id="projects">
 				<header>
-					<h2><a href="#">Data Exploration:<br />
+					<h2><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis">Data Exploration:<br />
 							Autism Diagnosis</a></h2>
 				</header>
 				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns
