--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 				</header>
 				<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns
 					and their correlation with behavioral traits.</p>
-				<a href="#" class="image fit"><img src="images/autismawareness.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/autismawareness.png" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis" class="button">View
 							Project</a></li>
@@ -540,6 +540,19 @@
 						src="images/mlops-stack.jpg" /></a>
 				<ul class="actions special">
 					<li><a href="https://github.com/gaganjotshan/MLOps-End2End" class="button">Ongoing</a></li>
+				</ul>
+			</article>
+
+			<article id="projects" class="project-article">
+				<h2><a href="https://gemini-resume-analyzer.streamlit.app/">AI, NLP & Streamlit:<br />
+					Gemini Resume Analyzer</a></h2>
+				<p>If you are a recruter reading about my project, my resume analyer probalbly worked!! <br />
+					It's an AI-powered application that analyzes resumes against job descriptions, providing keyword analysis, 
+				   resume evaluation, and tailored improvement suggestions using Google's Gemini AI model.</p>
+				<a href="https://gemini-resume-analyzer.streamlit.app/" class="image main"><img
+						src="images/resume-analyzer.jpeg" alt="Resume Analyzer" /></a>
+				<ul class="actions special">
+					<li><a href="https://gemini-resume-analyzer.streamlit.app/" class="button">Live Demo</a></li>
 				</ul>
 			</article>
 
